# sev-snp-utils-wasm

./: Cargo.toml  LICENSE_MIT  README.md  copyToSdk.sh
convertWasmToJs/: convert_wasm_to_js.py  sev-snp-utils-sdk.js
src/: amd.rs  lib.rs  utils.rs
tests/: constants.rs  web.rs
www/: README.md  index.js  package-lock.json  package.json  webpack.config.js
