[package]
name = "sev-snp-utils-wasm"
version = "0.1.0"
authors = ["Chris Cassano <1285652+glitch003@users.noreply.github.com>"]
edition = "2018"
homepage = "https://github.com/LIT-Protocol/sev-snp-utils-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
# sev-snp-utilities = { path = "../sev-snp-utils", features = ["js"] }
sev = { path = "../sev" }
serde-wasm-bindgen = "0.6.1"
wasm-bindgen-futures = "0.4.38"
js-sys = "0.3.65"
base64_light = "0.1"
byteorder = "1.5.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.getrandom]
features = [
    "js",
]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'console',
  'Blob',
  'Storage'
]
